--- a/index.html
+++ b/index.html
@@ -9,36 +9,34 @@
 <body>
     <div class="container">
         <h1>Password Generator</h1>
-        <!-- TODO: Create an input field for password length (between 8-128 characters) -->
-        <label for="length">Password Length:</label>
-        <input type="number" id="length" value="12" min="8" max="128">
+        <div class="form-group">
+            <label for="length">Masukkan Panjang Password:</label>
+            <input type="number" id="length" min="4" max="32" value="12">
+        </div>
 
-        <h3>Select criteria:</h3>
-        <!-- TODO: Create checkboxes for including uppercase, lowercase, numbers, and special characters -->
-        <label>
-            <input type="checkbox" id="includeUppercase"> Include Uppercase
-        </label><br>
-        <label>
-            <input type="checkbox" id="includeLowercase"> Include Lowercase
-        </label><br>
-        <label>
-            <input type="checkbox" id="includeNumbers"> Include Numbers
-        </label><br>
-        <label>
-            <input type="checkbox" id="includeSpecialChars"> Include Special Characters
-        </label><br>
-        
-        <!-- TODO: Create a button to generate the password -->
-        <button id="generateBtn">Generate Password</button>
-        
-        <!-- TODO: Create a text field to display the generated password -->
-        <p id="passwordOutput"></p>
+        <div class="form-group">
+            <input type="checkbox" id="includeUppercase" checked>
+            <span for="includeUppercase">Huruf Besar</span>
+        </div>
+        <div class="form-group">
+            <input type="checkbox" id="includeLowercase" checked>
+            <span for="includeLowercase">Huruf Kecil</span>
+        </div>
+        <div class="form-group">
+            <input type="checkbox" id="includeNumbers" checked>
+            <span for="includeNumbers">Angka</span>
+        </div>
+        <div class="form-group">
+            <input type="checkbox" id="includeSymbols" checked>
+            <span for="includeSymbols">Simbol</span>
+        </div>
 
-        <!-- BONUS: Add a "Copy to Clipboard" button -->
-        <button id="copyBtn">Copy to Clipboard</button>
+        <button onclick="generatePassword()" id="generateBtn">Generate Password</button>
+        <p id="passwordOutput" hidden></p>
+        <input type="text" id="password" readonly placeholder="Password akan muncul disini ...">
+        <div id="div_copy"></div>
     </div>
 
     <script src="script.js"></script>
-    <script src="dom.js"></script>
 </body>
 </html>
